# CRM_Case_Study

./: .gitignore  .pre-commit-config.yaml  EDA.ipynb  README.md  main.py  pyproject.toml  run_pipeline.py
src/: config.py  constants.py  feature_engineering.py  prepare_data.py
src/model/: evaluation.py  model.py  tune_model.py
