[project]
name = "crm-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogluon-tabular>=1.4.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]
